# stock-crypto-analyzer

./: .gitignore  LIVE_OPS.md  RESULTS.md  RESULTS_V2.md  pyproject.toml
docs/: brief_2026-05-25.html  brief_latest.html  brief_latest.json  index.html
output/: equity_crypto_a9d12b276b4c.csv  equity_in_221d0169e91f.csv  equity_us_53e2641244e5.csv  summary.json  tearsheet_crypto_a9d12b276b4c.html  tearsheet_crypto_a9d12b276b4c.json  tearsheet_in_221d0169e91f.html  tearsheet_in_221d0169e91f.json  tearsheet_us_53e2641244e5.html  tearsheet_us_53e2641244e5.json  trades_crypto_a9d12b276b4c.csv  trades_in_221d0169e91f.csv  trades_us_53e2641244e5.csv  v2_equity_crypto_v1_baseline_398a67667c03.csv  v2_equity_crypto_v2a_long_only_09f742344c5d.csv  v2_equity_crypto_v2b_residual_14637d479f1d.csv  v2_equity_crypto_v2d_full_72309e911e91.csv  v2_equity_in_v1_baseline_07be11e0ef59.csv  v2_equity_in_v2a_long_only_cb48846a5a90.csv  v2_equity_in_v2b_residual_1ec61c8f40b4.csv  v2_equity_in_v2d_full_3ab16b38645c.csv  v2_equity_us_v1_baseline_76579b835a93.csv  v2_equity_us_v2a_long_only_b27d3e836956.csv  v2_equity_us_v2b_residual_d87313e41a64.csv  v2_equity_us_v2c_sector_neutral_3b0b85394b90.csv  v2_equity_us_v2d_full_5211c3e8bbef.csv  v2_summary.json  v2_tearsheet_crypto_v1_baseline_398a67667c03.html  v2_tearsheet_crypto_v1_baseline_398a67667c03.json  v2_tearsheet_crypto_v2a_long_only_09f742344c5d.html  v2_tearsheet_crypto_v2a_long_only_09f742344c5d.json  v2_tearsheet_crypto_v2b_residual_14637d479f1d.html  v2_tearsheet_crypto_v2b_residual_14637d479f1d.json  (+20 more)
output_dryrun/: summary.json  (+4 more)
(+66 files in other folders)
