[project]
name = "sca"
version = "0.1.0"
description = "Stock + Crypto Analyzer — Phase 1 Momentum Backtest"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "scipy>=1.13",
  "yfinance>=0.2.40",
  "ccxt>=4.3",
  "requests>=2.32",
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
  "jinja2>=3.1",
  "python-dateutil>=2.9",
  "tqdm>=4.66",
  "tabulate>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
